--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Wikonator/Encounter#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.14.0",
     "pg": "^6.1.0",
     "url-parse": "^1.1.3"
